Bug: Increase z-index in vaModel component (#589)

--- a/packages/web-components/src/components/va-modal/va-modal.css
+++ b/packages/web-components/src/components/va-modal/va-modal.css
@@ -17,7 +17,7 @@
   text-align: center;
   top: 0;
   width: 100%;
-  z-index: 6;
+  z-index: 9001;
 }
 
 :host([visible]:not([visible='false']))::before {
